added simple ui and revise the logi

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     
-
-
+    <button value="rock" id="rock__btn">Rock</button>
+    <button value="paper" id="paper__btn">Paper</button>
+    <button value="scissor" id="scissor__btn">Scissors</button>
     <script src="script.js"></script>
 </body>
 </html>
