Change the placeholder text

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="main__results__section">
             <p>Results</p>
             <div class="result__box">
-                <p id="result__box__text">lorem ipsum dolor asdasd asdas</p>
+                <p id="result__box__text">New game. Take your pick!</p>
             </div>
         </div>
 
